Fix bug #48215 - Calling a method with the same name as the parent class calls the constructor instead.